src-ken&y/objects/Process_Job__c.object
<CustomObject>
    <customHelpPage>HelpProcessJobs</customHelpPage>
    <description>Establish and manage scheduled jobs to run at various hours or frequencies</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this job is active and will be run at the specified times, uncheck to disable this job.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Emails_Notified__c</fullName>
        <description>Email Addresses separated by a comma that will be notified when a batch completes. Maximum of 25 addresses allowed.</description>
        <label>Additional Emails Notified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>The actual Apex class name to execute for this job</description>
        <inlineHelpText>The name of the Apex class that executes the job.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The number of records for each execution of the batch.</description>
        <inlineHelpText>The number of records for each execution of the batch.</inlineHelpText>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company that will be used for the input parameter to the job</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Ahead__c</fullName>
        <label>Days Ahead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>What does this job do in the system</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <description>record problems with this job</description>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Allow per facility job scheduling</inlineHelpText>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company must match Job Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>how frequently should this job be scheduled.</description>
        <inlineHelpText>The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Quarter Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count of frequency units used to set next run time.</description>
        <inlineHelpText>The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Records__c</fullName>
        <label>Max Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>For external processes that also live within a namespace, allow the job record to specify the namespace to use</description>
        <inlineHelpText>The namespace for the job record to use (for external processes that also exist within a namespace).</inlineHelpText>
        <label>Namespace</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Run__c</fullName>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Run_Hour__c</fullName>
        <description>Enter the hour(s) of the day to run this job daily: example 8,15  or 8-15</description>
        <inlineHelpText>The schedule is determined by the preferred run hours, frequency, and interval.</inlineHelpText>
        <label>Preferred Run Hours</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Job_Next__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The next job to run in this sequence of scheduled jobs</description>
        <label>Next Job in Sequence</label>
        <referenceTo>Process_Job__c</referenceTo>
        <relationshipLabel>Process Jobs</relationshipLabel>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queueable_Id__c</fullName>
        <label>Queueable Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Un_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this job will not execute on any schedule, it must be launched from the Run button or from another job</inlineHelpText>
        <label>Un Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Notified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that will be notified when the job completes.</description>
        <label>User Notified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Process_Job_Next__c</columns>
        <columns>Description__c</columns>
        <columns>Frequency__c</columns>
        <columns>Interval__c</columns>
        <columns>Exception__c</columns>
        <columns>Preferred_Run_Hour__c</columns>
        <columns>Last_Run__c</columns>
        <columns>Next_Run__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Batch_Size</fullName>
        <active>true</active>
        <errorConditionFormula>Batch_Size__c &lt; 1 || Batch_Size__c &gt; 2000</errorConditionFormula>
        <errorDisplayField>Batch_Size__c</errorDisplayField>
        <errorMessage>You can must choose a batch size between 1 and 2000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pref_run_hours</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Frequency__c, &quot;Hours&quot;) &amp;&amp;
Preferred_Run_Hour__c != &quot;&quot; &amp;&amp;
NOT(CONTAINS(Preferred_Run_Hour__c, &quot;-&quot;)||
CONTAINS(Preferred_Run_Hour__c, &quot;,&quot;))</errorConditionFormula>
        <errorDisplayField>Preferred_Run_Hour__c</errorDisplayField>
        <errorMessage>Invalid Frequency and Preferred Run Hour setting.</errorMessage>
    </validationRules>
</CustomObject>